extract assertions about matches to helper methods